# adaptive_grip

./: .gitignore  CMakeLists.txt  Makefile
arduino/Individual_motor_test/: Individual_motor_test.ino  motorScripts.ino
arduino/Motor_with_feedback/: Additional_Functions.ino  Motor_Control.ino  Motor_with_feedback.ino  Pressure_feedback.ino
arduino/Separate_Direction_Control/: Additional_Functions.ino  Motor_Control.ino  Separate_Direction_Control.ino
arduino/test_stepper_motor/: test_stepper_motor.ino
gantry_qt/: CMakeLists.txt  calibrationwindow.cpp  calibrationwindow.h  calibrationwindow.ui  chartview.cpp  chartview.h  engthread.h  gantrywindow.cpp  gantrywindow.h  gantrywindow.ui  itemdisplaywindow.cpp  liveupdatethread.h  liveviewer.cpp  liveviewer.h  main.cpp
headers/: CCloud.h  Camera.h  CameraFile.h  ClusterFinder.h  Engine.h  Engine2.h  Engine3.h  Logger.h  PCLUtils.h  PlaneFilter.h  QLogger.h  Shell.h  SurfaceMap.h  TwoPlaneFilter.h  WSObject.h  colours.h  common_defs.h
headers/inst/: pcl_visualizer.h  plane_clipper_3D.h
programs/: basic_shell.cpp  interface_update.cpp  test_engine.cpp  test_two_plane_filter.cpp  test_vector_three.cpp
qt/RobotGUI/: ItemsImage.cpp  ItemsImage.h  ObservedLine.cpp  ObservedLine.h  RobotGUI.cpp  RobotGUI.h  RobotGUI.h.autosave  RobotGUI.pro  TargetItem.cpp  TargetItem.h  main.cpp
qt/tmp/: .itemdisplaywindow.cpp.swn  .itemdisplaywindow.h.swn  itemdisplaywindow.cpp  itemdisplaywindow.h
qtgui/RobotGUI/: GuiPosition.cpp  GuiPosition.h  RobotGUI.pro  TargetItem.h
src/: CMakeLists.txt  Calibration.cpp  Camera.cpp  ClusterFinder.cpp  Engine.cpp  Engine2.cpp  Logger.cpp  PCLUtils.cpp  PlaneFilter.cpp  SurfaceMap.cpp  WSObject.cpp  basic_shell.cpp  pcl_visualizer_instantiations.cpp
vision/gl_example/: Makefile  main.cpp  mycppview
vision/pcl_example/: CMakeLists.txt  openni_viewer_simple.cpp
vision/pcl_manipulation_shell/: CMakeLists.txt  pcl_manipulation_shell.cpp
vision/pcl_testing/: test_pcl_grab.cpp
